<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="50dp">

    <TextView
        android:textColor="@color/on_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/forgetme"
        android:textSize="@dimen/headerXXL"
        android:textStyle="bold"/>
    <TextView
        android:textColor="@color/on_primary"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/registered_emailid"
        android:textStyle="bold"/>

    <EditText
        style="@style/MyEditBoxStyle"
        android:id="@+id/registered_emailid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:singleLine="true" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp" >



        <TextView
            android:textColor="@color/on_primary"
            android:id="@+id/forgot_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:text="@string/forgotPassword"
            android:layout_marginTop="10dp"
            android:textStyle="bold" />


        <TextView
            android:textColor="@color/on_primary"
            android:layout_marginTop="10dp"
            android:id="@+id/backToLoginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textStyle="bold" />

    </RelativeLayout>


</LinearLayout>